# AdContext-Backend

./: .dockerignore  Dockerfile  Dockerfile.prod  README.md  client_example.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  server-info.json  test_mcp_server.py  test_mem0_connection.py
api/: gateway.py
core/: __init__.py  service.py
gateway/: __init__.py  blockchain.py  caomain.py  jiaocheng.md  main.py  prompt.py
schemas/: common.py  filter.py  privacy.py  websocket.py
services/: authorization.py  filter.py  privacy.py  websocket.py
services/filter/: README.md  __init__.py  example.py  filter_service.py  prompts.py  test_filter_service.py
services/privacy/: README.md  __init__.py  example_usage.py  privacy_classifier.py  test_ai_integration.py
storage/: __init__.py  db.py  local_storage.py  service.py  service_test.py
