[project]
name = "AdContext"
version = "0.1.0"
description = "AdContext is a Python library for creating and managing context-based advertising campaigns."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.6",
    "mem0ai>=0.1.115",
    "python-dotenv>=1.1.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "mem0ai>=0.1.55",
]

# 添加以下配置来解决包发现问题
[tool.setuptools]
packages = ["core", "schemas", "storage", "gateway", "services"]

[tool.setuptools.package-dir]
"" = "."
